# ROAR-Simulation

./: CMakeLists.txt  README.md  package.xml
Mars_yard_2024/: marsYardVanilla.dae  mars_yard.world  texturedMeshMarsYard24.dae
config/: Controllers.yaml
launch/: display.launch  gazebo.launch  mars_yard_24.launch  spawn.launch
roar_msgs/msg/: LandmarkArray.msg:Zone.Identifier
src/: teleop.py
teleoperation/src/: teleop.py
urdf/: roar.urdf
